# apelog

./: .gitignore  README.md
apelog-project/: pyproject.toml
apelog-project/src/apelog_app/: main.py
apelog-project/src/apelog_app/controller/: main_controller.py
apelog-project/src/apelog_app/model/: data.py
apelog-project/src/apelog_app/view/: app.kv  file_chooser.py
apelog-project/src/apelog_project/: main.py
