[project]
name = "apelog-project"
version = "0.1.0"
description = "Software for smart multiple audio event detection and real-time editing."
authors = [
    {name = "PedroSchneider1",email = "162492569+PedroSchneider1@users.noreply.github.com"},
    {name = "GabrielSantana013",email = "gabrielsantanadias133@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.3.3,<3.0.0)",
    "kivy[base] (>=2.3.1,<3.0.0)",
    "numba (>=0.58.1)",
    "llvmlite (>=0.41.1)",
    "librosa (==0.11.0)"
]

[tool.poetry]
packages = [{include = "apelog_project", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
