[project]
name = "apelog-project"
version = "0.1.0"
description = "Software for smart multiple audio event detection and real-time editing."
authors = [
    {name = "PedroSchneider1",email = "162492569+PedroSchneider1@users.noreply.github.com"},
    {name = "GabrielSantana013",email = "gabrielsantanadias133@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kivy (>=2.3.1,<3.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "librosa (>=0.11.0,<0.12.0)",
    "pathlib (>=1.0.1,<2.0.0)",
    "kivymd (>=1.2.0,<2.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "kivy-garden-matplotlib (>=0.1.1.dev0,<0.2.0)",
    "kivy-garden (>=0.1.5,<0.2.0)",
]

[tool.poetry]
packages = [{include = "apelog_app", from = "src"}]

[tool.poetry.scripts]
app = "apelog_app.main:main"


[tool.poetry.group.dev.dependencies]
setuptools = "^80.9.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
